--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "description": "A lightweight library for MithrilJS to create your own custom transitions based on the lifecycle of your components.",
   "main": "index.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-eslint": "^4.0.5",
     "babel-tape-runner": "^1.2.0",
+    "babelify": "^6.3.0",
+    "browserify": "^11.0.1",
     "eslint": "^1.0.0",
     "eslint-config-airbnb": "0.0.7",
     "eslint-plugin-react": "^3.2.0",
+    "hapi": "^9.3.1",
+    "inert": "^3.0.1",
+    "mithril": "^0.2.0",
     "tap-spec": "^4.1.0",
-    "tape": "^4.2.0"
+    "tape": "^4.2.0",
+    "velocity-animate": "^1.2.2"
   },
   "files": [
     "dist"
@@ -24,7 +29,8 @@
     "build": "npm run clean && babel src --source-maps --out-dir dist --ignore /tests/",
     "start": "babel src --watch --source-maps --out-dir dist --ignore /tests/",
     "prepublish": "npm run build",
-    "debug": "iron-node tests/index.js"
+    "debug": "iron-node tests/index.js",
+    "server": "cd example && node server.js"
   },
   "repository": {
     "type": "git",
