--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,6 @@
       2,
       {"anonymous": "always", "named": "never"}
     ],
-    "comma-dangle": [2, "never"],
-    "new-cap": 0
+    "comma-dangle": [2, "never"]
   }
 }
