--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "dist/index.js",
   "dependencies": {},
   "devDependencies": {
-    "babel": "^5.8.21",
-    "babel-eslint": "^4.0.5",
-    "babel-tape-runner": "^1.2.0",
-    "babelify": "^6.3.0",
-    "browserify": "^11.0.1",
-    "eslint": "^1.0.0",
-    "eslint-config-airbnb": "0.0.7",
-    "eslint-plugin-react": "^3.2.0",
-    "hapi": "^9.3.1",
-    "inert": "^3.0.1",
-    "mithril": "^0.2.0",
-    "tap-spec": "^4.1.0",
-    "tape": "^4.2.0",
-    "velocity-animate": "^1.2.2"
+    "babel": "~5.8.21",
+    "babel-eslint": "^4.1.4",
+    "babel-tape-runner": "~1.2.0",
+    "babelify": "~6.3.0",
+    "browserify": "~11.0.1",
+    "conventional-changelog": "~0.5.1",
+    "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^0.1.0",
+    "eslint-config-tinchoz49": "^1.0.3",
+    "eslint-plugin-react": "^3.8.0",
+    "hapi": "~9.3.1",
+    "inert": "~3.0.1",
+    "mithril": "~0.2.0",
+    "tap-spec": "~4.1.0",
+    "tape": "~4.2.0",
+    "velocity-animate": "~1.2.2"
   },
   "files": [
     "dist/index.js",
@@ -30,7 +32,8 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --source-maps --out-dir dist --standalone --ignore /tests/ && npm run standalone && cp src/index.css dist/index.css",
     "start": "babel src --watch --source-maps --out-dir dist --standalone --ignore /tests/",
-    "prepublish": "npm run build",
+    "prepublish": "npm run test && npm run build",
+    "version": "conventional-changelog -i CHANGELOG.md --overwrite && git add CHANGELOG.md",
     "debug": "iron-node tests/index.js",
     "example": "cd example && node server.js",
     "standalone": "browserify dist/index.js --standalone mithrilTransition | uglifyjs > dist/mithril-transition.umd.js"
