--- a/package.json
+++ b/package.json
@@ -3,41 +3,55 @@
   "version": "2.2.6",
   "description": "A lightweight library for MithrilJS to create your own custom transitions based on the lifecycle of your components.",
   "main": "dist/index.js",
-  "dependencies": {},
   "devDependencies": {
-    "babel": "~5.8.21",
-    "babel-eslint": "^4.1.4",
-    "babel-tape-runner": "~1.2.0",
-    "babelify": "~6.3.0",
-    "browserify": "~11.0.1",
-    "conventional-changelog": "~0.5.1",
-    "eslint": "^1.9.0",
-    "eslint-config-airbnb": "^0.1.0",
-    "eslint-config-tinchoz49": "^1.0.3",
-    "eslint-plugin-react": "^3.8.0",
-    "hapi": "~9.3.1",
-    "inert": "~3.0.1",
-    "mithril": "~0.2.0",
-    "tap-spec": "~4.1.0",
-    "tape": "~4.2.0",
-    "velocity-animate": "~1.2.2"
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "~7.2.0",
+    "browserify": "~13.0.0",
+    "conventional-changelog": "~1.1.0",
+    "eslint": "^2.2.0",
+    "eslint-config-tinchoz49": "^2.0.1",
+    "iron-node": "^2.2.15",
+    "live-server": "^0.9.2",
+    "mithril": "~0.2.2-rc.1",
+    "velocity-animate": "~1.2.2",
+    "watchify": "^3.7.0"
   },
   "files": [
     "dist/index.js",
-    "dist/index.js.map",
     "dist/index.css"
   ],
   "scripts": {
-    "test": "babel-tape-runner \"src/tests/index.js\" | tap-spec",
-    "clean": "rm -rf dist",
-    "build": "npm run clean && babel src --source-maps --out-dir dist --standalone --ignore /tests/ && npm run standalone && cp src/index.css dist/index.css",
-    "start": "babel src --watch --source-maps --out-dir dist --standalone --ignore /tests/",
+    "clean": "rm -rf dist && mkdir dist",
+    "build": "eslint src && npm run clean && browserify src/index.js -o dist/index.js && npm run standalone && cp src/index.css dist/index.css",
+    "start": "npm run clean && watchify example/index.js -o example/build.js -v & live-server example",
     "prepublish": "npm run build",
     "preversion": "npm run build",
     "version": "conventional-changelog -i CHANGELOG.md --overwrite && git add .",
-    "debug": "iron-node tests/index.js",
-    "example": "cd example && node server.js",
-    "standalone": "browserify dist/index.js --standalone mithrilTransition | uglifyjs > dist/mithril-transition.umd.js"
+    "debug": "iron-node npm start",
+    "standalone": "browserify src/index.js --standalone mithrilTransition | uglifyjs > dist/mithril-transition.umd.js"
+  },
+  "eslintConfig": {
+    "extends": "tinchoz49",
+    "globals": {
+      "sessionStorage": true,
+      "document": true
+    }
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ],
+          "plugins": [
+            "add-module-exports"
+          ]
+        }
+      ]
+    ]
   },
   "repository": {
     "type": "git",
