--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iron-node": "^2.2.15",
     "live-server": "^0.9.2",
     "mithril": "~0.2.2-rc.1",
+    "uglifyjs": "^2.4.10",
     "velocity-animate": "~1.2.2",
     "watchify": "^3.7.0"
   },
