--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "~7.2.0",
     "browserify": "~13.0.0",
     "conventional-changelog-cli": "^1.1.1",
-    "eslint": "^2.5.1",
+    "eslint": "^2.7.0",
     "eslint-config-tinchoz49": "^2.0.1",
-    "iron-node": "^2.2.16",
     "live-server": "^0.9.2",
-    "mithril": "~0.2.2-rc.1",
+    "mithril": "~0.2.3",
     "uglifyjs": "^2.4.10",
-    "velocity-animate": "~1.2.2",
+    "velocity-animate": "~1.2.3",
     "watchify": "^3.7.0"
   },
   "files": [
