--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "browserify": "~13.0.0",
     "conventional-changelog-cli": "^1.1.1",
     "eslint": "^2.7.0",
-    "eslint-config-tinchoz49": "^2.0.1",
+    "eslint-config-postcss": "^2.0.0",
+    "eslint-config-tinchoz49": "^2.0.3",
     "live-server": "^0.9.2",
     "mithril": "~0.2.3",
     "uglifyjs": "^2.4.10",
