--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "A lightweight library for MithrilJS to create your own custom transitions based on the lifecycle of your components.",
   "main": "dist/index.js",
   "devDependencies": {
-    "babel-cli": "^6.6.5",
+    "babel-cli": "^6.7.5",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "~7.2.0",
     "browserify": "~13.0.0",
     "conventional-changelog-cli": "^1.1.1",
-    "eslint": "^2.7.0",
+    "eslint": "^2.8.0",
     "eslint-config-postcss": "^2.0.0",
-    "eslint-config-tinchoz49": "^2.0.3",
+    "eslint-config-tinchoz49": "^2.1.0",
     "live-server": "^0.9.2",
-    "mithril": "~0.2.3",
+    "mithril": "^0.2.4",
     "uglifyjs": "^2.4.10",
     "velocity-animate": "~1.2.3",
     "watchify": "^3.7.0"
@@ -30,7 +30,7 @@
     "build:babel": "babel src -d dist",
     "build:standalone": "browserify src/index.js --standalone mithrilTransition | uglifyjs > dist/mithril-transition.umd.js",
     "build": "npm test && npm run clean && npm run build:babel && npm run build:standalone && npm run build:assets",
-    "start": "npm run build && watchify example/index.js -o example/build.js -v & npm run build:babel -- --watch & live-server example",
+    "start": "npm run build && watchify example/index.js -o example/build.js --debug -v & npm run build:babel -- --watch & live-server example",
     "prepublish": "npm run build",
     "preversion": "npm run build",
     "version": "conventional-changelog -i CHANGELOG.md --same-file && git add .",
