--- a/package.json
+++ b/package.json
@@ -2,69 +2,32 @@
   "name": "mithril-transition",
   "version": "3.1.0",
   "description": "A lightweight library for MithrilJS to create your own custom transitions based on the lifecycle of your components.",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "~7.2.0",
-    "browserify": "~13.0.0",
-    "conventional-changelog-cli": "^1.1.1",
-    "eslint": "^2.8.0",
-    "eslint-config-postcss": "^2.0.0",
-    "eslint-config-tinchoz49": "^2.1.0",
-    "live-server": "^0.9.2",
-    "mithril": "^0.2.4",
+    "browserify": "^14.1.0",
+    "budo": "^9.4.7",
+    "eslint": "^3.18.0",
+    "eslint-config-postcss": "^2.0.2",
+    "mithril": "^1.0.1",
     "uglifyjs": "^2.4.10",
-    "velocity-animate": "~1.2.3",
-    "watchify": "^3.7.0"
+    "velocity-animate": "^1.4.3"
   },
-  "files": [
-    "dist/index.js",
-    "dist/index.css"
-  ],
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
     "test": "eslint src",
     "build:assets": "cp src/index.css dist/index.css",
-    "build:babel": "babel src -d dist",
     "build:standalone": "browserify src/index.js --standalone mithrilTransition | uglifyjs > dist/mithril-transition.umd.js",
-    "build": "npm test && npm run clean && npm run build:babel && npm run build:standalone && npm run build:assets",
-    "start": "npm run build && watchify example/index.js -o example/build.js --debug -v & npm run build:babel -- --watch & live-server example",
+    "build": "npm test && npm run clean && npm run build:standalone && npm run build:assets",
+    "start": "budo example/index.js --dir example --live --open",
     "prepublish": "npm run build",
     "preversion": "npm run build",
-    "version": "conventional-changelog -i CHANGELOG.md --same-file && git add .",
-    "debug": "iron-node npm start"
+    "version": "chan release ${npm_package_version} && git add ."
   },
   "eslintConfig": {
-    "extends": "tinchoz49",
-    "globals": {
-      "sessionStorage": true,
-      "document": true
+    "extends": "postcss",
+    "env": {
+      "browser": true
     }
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "add-module-exports"
-    ]
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ],
-          "plugins": [
-            "add-module-exports"
-          ]
-        }
-      ]
-    ]
   },
   "repository": {
     "type": "git",
