--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,5 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 /node_modules/
 
-example/build.js
+example/node_modules/
 
-/dist/index.js*
