changed organization of npm scripts for the example

--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "clean": "rm -rf dist && mkdir dist",
     "test": "npm run test:browser",
     "test:browser": "testcafe \"saucelabs:Chrome@56.0:Windows 10\",\"saucelabs:Firefox@51.0:Windows 10\" tests/browser/index.js --speed 0.5",
-    "test:local-browser": "URL=http://localhost:4445 testcafe chrome,firefox --app \"npm run build:example && npm run example:serve\" --speed 0.5",
     "posttest": "eslint .",
-    "build:example": "browserify example/index.js -o example/build.js",
     "build:assets": "cp src/index.css dist/index.css",
     "build:standalone": "browserify --standalone mithrilTransition src/index.js -o dist/mithril-transition.js && babili dist/mithril-transition.js -o dist/mithril-transition.min.js --source-maps",
     "build": "npm test && npm run clean && npm run build:standalone && npm run build:assets",
     "start": "budo example/index.js:build.js --dir example --live --open",
+    "example:build": "browserify example/index.js -o example/build.js -d",
+    "example:test": "URL=http://localhost:4445 testcafe chrome,firefox --app \"npm run example:build && npm run example:serve\" --speed 0.5",
     "example:serve": "http-server example -s -p 4445",
     "prepublish": "npm run build",
-    "preversion": "npm run build",
+    "preversion": "npm run build && npm test",
     "version": "chan release ${npm_package_version} && git add ."
   },
   "eslintConfig": {
